tests/default/bad/conflict.catala_en
## Article

```catala
declaration scope A:
  output x content integer

scope A:
  definition x under condition true consequence equals 1
  definition x under condition true consequence equals 0
```

```catala-test-inline
$ catala Interpret -s A --message=gnu
tests/default/bad/conflict.catala_en:8.56-8.57: [ERROR] During evaluation: conflict between multiple valid consequences for assigning the same variable.
tests/default/bad/conflict.catala_en:8.56-8.57: [ERROR]
tests/default/bad/conflict.catala_en:9.56-9.57: [ERROR]
#return code 123#
```
